Project SimpleBank {
  database_type: 'PostgreSQL'
  Note: '''
    # Simple Bank Database
  '''
}

Table users as U {
  username varchar [pk]
  hashed_password varchar [not null]
  full_name varchar [not null]
  email varchar [unique, not null]
  password_change_at timestamp [not null, default: '0001-01-01 00:00:00Z']
  created_at timestamp [not null, default: `now()`]
}

Table accounts as A {
  id bigint [pk, increment]
  owner varchar [not null, ref: > U.username]
  balance bigint [not null]
  currency varchar [not null]
  created_at timestamp [not null, default: `now()`]

  indexes {
    owner
    (owner, currency) [unique]
  }
}

Table entries {
  id bigint [pk, increment]
  account_id bigint [not null,ref: > A.id]
  amount bigint [not null, note: "can be negative or positive"]
  created_at timestamp [not null, default: `now()`]

  indexes {
    account_id
  }
}

Table transfers {
  id bigint [pk, increment]
  from_account_id bigint [not null, ref: > A.id]
  to_account_id bigint [not null, ref: > A.id]
  amount bigint [not null, note: "must be positive"]
  created_at timestamp [not null, default: `now()`]

  indexes {
    from_account_id
    to_account_id
    (from_account_id, to_account_id)
  }
}

Table sessions {
  id uuid [pk]
  username varchar [ref: > U.username, not null]
  refresh_token varchar [not null]
  user_agent varchar [not null]
  client_ip varchar [not null]
  is_blocked boolean [not null, default: false]
  expired_at timestamptz [not null]
  created_at timestamptz [not null, default: `now()`]
}
